--- a/src/global.css
+++ b/src/global.css
@@ -28,7 +28,8 @@
 body {
   background-color: var(--gray-900);
   color: var(--gray-300);
-  --webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
+  --moz-osx-font-smoothing: grayscale;
 }
 
 body,
